# ofp

./: .gitignore  _audit.py  _audit_features.py  _check_data.py  _check_features.py  _check_futures_liq.py  _check_futures_prices.py  _check_liq_coverage.py  _check_magnitude_cols.py  _check_price_dtype.py  _check_probs.py  _check_zoom_features.py  _debug_train.py  _debug_weighted.py  _inspect_chd.py  _inspect_relabel.py  _make_target_dataset.py  _pattern_confirm.py  _pattern_confirm_futures.py  _pattern_filter.py  _test_liq_only.py  _test_zoom_extraction.py  _trace.py  _trace_futures.py  _trace_move_start.py  _trace_target.py  audit_labels.py  backup_for_migration.sh  canary_test.py  check_dataset_dates.py  diagnose_model.py  download_all_futures.py  download_futures_1d.py  download_futures_lowmem.py  download_futures_multi.py  download_futures_seq.py  download_raw_data.py  inspect_book_liq.py  inspect_cols.py  inspect_trades.py  (+30 more)
docs/: OFP_BASELINE.md  V10_HANDOFF.md  cryptoHFTData_sdk_reference.md  oos_v10_verification.md  orderbook_data_audit.md
ofp/: api_streamer.py  book_reconstructor.py  data_schema.py  feature_extractor.py  feature_extractor_v2.py  grid_sweeper.py  relabel_magnitude.py  volume_clock.py
src/data/: pull_historical.py
src/ofp/: relabel_event.py  train_v2.py  train_v2b.py  train_v2c.py  train_v2d_oos.py  train_v2e_event.py  walk_forward.py
tests/: test_api_streamer.py  test_book_reconstructor.py  test_feature_extractor.py  test_grid_sweeper.py
