[project]
name = "ofp"
version = "0.1.0"
description = "Order Flow Predictor — BTCUSDT perpetuals data pipeline"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "lightgbm>=4.0.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.5.0",
    "sortedcontainers>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
